Disabling 'allow-updates' gsetting doesn't work properly
Tested on GNOME OS development branch from 6th February 2023.
The org.gnome.software
GSettings schema includes a boolean allow-updates
described thusly (emphasis mine):
If disabled, GNOME Software will hide the updates panel, not perform any automatic updates actions or prompt for upgrades.
If I run:
gsettings set org.gnome.software allow-updates false
Then I would expect the Updates tab to disappear; and if Software is running while this option is selected, I would expect the visible view to change to one of the other two modes.
Instead:
- If Software is running, there's apparently no effect: I can still switch to and from the Updates page
- When Software is restarted, the Updates button is shown on the top bar; clicking it leaves it in the clicked state but does nothing:
I haven't tested whether disabling this flag actually disables automatic updates and upgrade prompts.