I#2085 - gs-plugin-loaded: Notify about changes in GSettings::allow-updates

When the GSettings key `allow-updates` changes, the internal structures
are updated, but nobody was notified when the state of the plugin loader's
corresponding property changed.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/2085